--- a/VD/vd4.html
+++ b/VD/vd4.html
@@ -41,8 +41,8 @@
   var main = document.getElementById('main')
   const doc = document;
   const ATTR_KEY = '__preprops_';
-let arr = [1,2,3];
-let arr2 = [1,3]
+  let arr2 = [1]
+  let arr3 = [3,2,1]
   render(main)
 
   let timer;
@@ -61,26 +61,26 @@ let arr2 = [1,3]
       children: flatten(children) || []
     }
   }
-  function view(i=0) {
-    return h(
-      'div',
-      null,
-      'Hello World',
-      h(
-        'ul',
-        null,
-        arr.map(function (i) {
-        return h("li", {
-          id: i,
-          class: "li-".concat(i),
-          key: i
-        }, "\u7B2C", i)
-      })
-      )
-    );
+  // function view(i=0) {
+  //   return h('div',null,h("li", {
+  //         id: 2,
+  //         class: "li-".concat(2),
+  //         key: 2
+  //       }, "\u7B2C", 2))
+      
 
-  }
-  function view2(i=0) {
+  // }
+  // function view2(i=0) {
+  //   return h('div',null,h("li", {
+  //         id: 1,
+  //         class: "li-".concat(1),
+  //         key: 1
+  //       }, "\u7B2C", 1))
+      
+  // }
+  
+
+function view() {
     return h(
       'div',
       null,
@@ -99,7 +99,26 @@ let arr2 = [1,3]
     );
 
   }
+  
+  function view2() {
+    return h(
+      'div',
+      {j:4,l:8},
+      'Hello World',
+      h(
+        'ul',
+        null,
+        arr3.map(function (i) {
+        return h("li", {
+          id: i,
+          class: "li-".concat(i),
+          key: i
+        }, "\u7B2C", i)
+      })
+      )
+    );
 
+  }
   // 创建dom元素
   function createElement(vdom) {
     // 如果vdom是字符串或者数字类型，则创建文本节点，比如“Hello World”
@@ -259,6 +278,7 @@ let arr2 = [1,3]
   }
 
   function diff(dom, newVDom, parent) {
+    console.log(parent);
     // 新建node
     if (dom == undefined) {
       parent.appendChild(createElement(newVDom));
@@ -333,7 +353,7 @@ let arr2 = [1,3]
     element.appendChild(dom);
 
     // 每500毫秒改变一次state，并生成VD
-    setInterval(() => {
+    setTimeout(() => {
       // state.num += 1;
       tick(element);
     }, 3000);
